src/test/ui/expr/if/issue-4201.rs
fn main() {
    let a = if true {
        0
    } else if false {
//~^ ERROR `if` may be missing an `else` clause
//~| expected `()`, found integer
        1
    };
}
